feat(loadTDfromCDS): add simpler function to load TD from CDS with submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/SpikeMerge"]
 	path = lib/SpikeMerge
 	url = https://github.com/limblab/SpikeMerge.git
+[submodule "lib/loadTDfromCDS"]
+	path = lib/loadTDfromCDS
+	url = https://github.com/raeedcho/loadTDfromCDS.git
